# case-calendar

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Caddyfile  Caddyfile.example  LICENSE  README.md  case-calendar.service  case-calendar.service.example  codecov.yml  config.benchmark.yaml  config.dev.yaml  config.example.yaml  pyproject.toml
agent-docs/: ARCHITECTURE.md  CONVENTIONS.md  DESIGN-DECISIONS.md
case_calendar/: alerts.py  cli.py  costs.py  courtlistener.py  courts.py  extractor.py  llm.py  pdf.py  serve.py  store.py  summary.py  sync.py  url_validator.py
docs/: _config.yml  architecture.md  calendars.md  case-summaries.md  cli.md  configuration.md  cost.md  development.md  index.md  installation.md  llm-prompts.md  local-llms.md  public-page.md  subscribing.md  webhooks.md
model-comparison/: AGENTS.md  README.md  SCORECARD.md  build_provider_stores.py  build_scoring_page.py  build_scoring_pages.py  cost.md  export_model_events.py  fetch_complete_benchmark.py  funnel_analysis.py  ground_truth.csv  ground_truth.template.csv  ground_truth_worksheet.py  model_actions.csv  model_entry_actions.csv  model_events.csv  score.md  score.py  score_entry_actions.py  score_models.py  snapshot_benchmark.py  snapshot_benchmark_store.py  summarize_phase.py
scripts/: AGENTS.md  README.md  _prod-env.sh  build_provider_stores.py  classify_significance.py  heal_drifted_keys.py  heal_key_derived_titles.py  heal_proceeding_notes.py  pull-prod-db  push-db-to-prod  reconcile-prod  reprocess_entries.py  smoke_all.py  smoke_sample.py  smoke_webhook.py  (+6 more)
(+54 files in other folders)
