[project]
name = "case-calendar"
version = "0.17.1"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "msgraph-sdk>=1.57.0",
    "azure-identity>=1.19.0",
    "httpx>=0.28.1",
    "json-repair>=0.30",
    "pypdf>=6.13.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.3",
    "tzdata>=2024.1; sys_platform == 'win32' or sys_platform == 'linux'",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
# Lint extras live alongside ``test`` so a single ``uv sync --extra lint
# --extra test`` set up everything CI runs. Ruff is version-pinned so
# contributors and CI agree on format opinion — bump this version (and
# re-run ``ruff format``) in the same PR whenever you want to roll
# forward.
lint = ["ruff==0.15.13"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning:google.*",
    "ignore::DeprecationWarning:msgraph.*",
    "ignore::DeprecationWarning:kiota_abstractions.*",
]

[project.scripts]
case-calendar = "case_calendar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["case_calendar"]
